--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Address.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Gender.cs" />
     <Compile Include="Inheritance\AreaCalculator.cs" />
