--- a/Services.DAL/Services.DAL.csproj
+++ b/Services.DAL/Services.DAL.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CrudServiceAsync.cs" />
     <Compile Include="Services\CrudService.cs" />
   </ItemGroup>
   <ItemGroup>
